# zabbix_44x_next

./: .gitignore  BUILD.md  BUILD.ru.md  ChangeLog  Makefile.am  PATCHLIST.md  PATCHLIST.ru.md  README.md  README.ru.md  RHELINSTALL.md  RHELINSTALL.ru.md  RHELUPDATE.md  RHELUPDATE.ru.md  UBUNTUINSTALL.md  UBUNTUINSTALL.ru.md  UBUNTUUPDATE.md  UBUNTUUPDATE.ru.md  build-backend.xml  build.xml  configure.ac  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: ant-ol7.yml  ant.yml  centos_pkg.yml  linux.yml  linux_test.yml  prerelease.yml  release.yml  rhel_pkg.yml  rockylinux_pkg.yml  sonarcloud-C.yml  sonarcloud-PHP.yml  sonarcloud-others.yml  sonarcloud.yml  test_build.yml  ubuntu_pkg.yml  ubuntu_pkg_self.yml  ubuntu_pkg_self_trusty.yml  ubuntu_pkg_trusty.yml
conf/: zabbix_agentd.conf  zabbix_agentd.win.conf  zabbix_proxy.conf  zabbix_server.conf
create/src/: dashboards.tmpl  data.tmpl  schema.tmpl
frontends/php/: actionconf.php  adm.regexps.php  api_jsonrpc.php  applications.php  auditacts.php  (+48 more)
include/: cfg.h  common.h  comms.h  db.h  dbcache.h  dbschema.h  export.h  memalloc.h  module.h  mutexs.h  perfmon.h  preproc.h  proxy.h  sysinc.h  sysinfo.h  version.h  zbxalgo.h  zbxdb.h  zbxdbupgrade.h  zbxembed.h  zbxhistory.h  zbxjson.h  zbxlld.h  zbxmedia.h  zbxregexp.h  zbxserver.h  zbxtasks.h  zbxtypes.h
m4/: ax_lib_mysql.m4  ax_lib_oracle_oci.m4
man/: zabbix_get.man  zabbix_sender.man
src/zabbix_js/: Makefile.am  zabbix_js.c
tests/: conf_tests.m4  tests_run.pl  zbxmockdata.c  zbxmockjson.c  zbxmocktest.c  zbxmocktime.c  zbxmockutil.c
(+1305 files in other folders)
